tests/pos/i10994.scala
// scalac: -Werror -deprecation -feature
def foo = true match
  case (b: Boolean): Boolean => ()
